# simppler

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  distributions.md  index.md  installation.md
docs/api/: basis.md  index.md  model.md  plot.md  utils.md
docs/tutorials/: benchmark.ipynb  index.md  k2-24-mcmc.ipynb  k2-24_mcmc.ipynb  multi-instrument.ipynb  radvel-comparison.ipynb
src/simppler/: __init__.py  _version.py  basis.py  kepler.py  model.py  plot.py  utils.py
tests/: conftest.py  test_basis.py  test_kepler.py  test_model.py  test_plot.py  test_simppler.py  test_utils.py
